Changes: -starts when button 2 clicked -audio goes up automatically every 4s in 11 modes -audio start from lowest, unhearable -goes through frequencies 250, 500, 1000, 2000, 4000, 8000 -allows to click when freq heard and posts result after all frequencies are done -only works with right ear at the moment

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,5 +67,13 @@
         android:layout_below="@+id/textView4"
         android:layout_centerHorizontal="true" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/textView6"
+        android:layout_below="@+id/textView5"
+        android:layout_centerHorizontal="true" />
+
 
 </RelativeLayout>
