Changes: -works for both ears -settings implemented with developer test mode

--- a/app/src/main/res/layout/activity_examination.xml
+++ b/app/src/main/res/layout/activity_examination.xml
@@ -67,4 +67,14 @@
         android:layout_below="@+id/textView5"
         android:layout_centerHorizontal="true"
         android:textColor="@android:color/primary_text_dark" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/testInfoTextView"
+        android:layout_below="@+id/textView6"
+        android:layout_centerHorizontal="true"
+        android:textColor="@android:color/primary_text_dark" />
+
 </RelativeLayout>
