--- a/app/src/main/res/layout/activity_examination.xml
+++ b/app/src/main/res/layout/activity_examination.xml
@@ -8,9 +8,10 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.skradacz.audiometer.ExaminationActivity"
     android:background="@android:color/background_dark"
-    android:clickable="false">
+    android:clickable="false"
+    tools:ignore="Overdraw">
 
-    <TextView android:id="@+id/click_here"
+    <TextView android:id="@+id/start_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:keepScreenOn="true"
@@ -26,16 +27,16 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
+        android:text=""
         android:id="@+id/textView2"
-        android:layout_below="@+id/click_here"
+        android:layout_below="@+id/start_text_view"
         android:layout_centerHorizontal="true"
         android:textColor="@android:color/primary_text_dark" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
+        android:text=""
         android:id="@+id/textView3"
         android:layout_below="@+id/textView2"
         android:layout_centerHorizontal="true"
@@ -44,7 +45,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
+        android:text=""
         android:id="@+id/textView4"
         android:layout_below="@+id/textView3"
         android:layout_centerHorizontal="true"
@@ -53,7 +54,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
+        android:text=""
         android:id="@+id/textView5"
         android:layout_below="@+id/textView4"
         android:layout_centerHorizontal="true"
@@ -62,7 +63,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
+        android:text=""
         android:id="@+id/textView6"
         android:layout_below="@+id/textView5"
         android:layout_centerHorizontal="true"
@@ -71,7 +72,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Text"
+        android:text=""
         android:id="@+id/testInfoTextView"
         android:layout_below="@+id/textView6"
         android:layout_centerHorizontal="true"
