--- a/app/src/main/res/layout/activity_how_to.xml
+++ b/app/src/main/res/layout/activity_how_to.xml
@@ -7,7 +7,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.skradacz.audiometer.HowToActivity"
-    android:background="@android:color/background_dark">
+    android:background="@android:color/background_dark"
+    tools:ignore="Overdraw">
 
     <TextView android:id="@+id/title"
         android:layout_width="wrap_content"
