--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity"
-    android:background="@android:color/background_dark">
+    android:background="@android:color/background_dark"
+    tools:ignore="Overdraw">
 
-    <TextView android:id="@+id/click_here"
+    <TextView android:id="@+id/start_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:keepScreenOn="true"
@@ -19,9 +20,12 @@
         android:gravity="center"
         android:text="@string/text_view_start"
         android:clickable="true"
-        android:layout_centerVertical="true"
-        android:onClick=""/>
-    <TextView android:id="@+id/click_here2"
+        android:onClick=""
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="100dp" />
+    <TextView android:id="@+id/how_to_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:keepScreenOn="true"
@@ -31,9 +35,9 @@
         android:gravity="center"
         android:text="@string/text_view_how_to"
         android:clickable="true"
-        android:layout_below="@+id/click_here"
+        android:layout_below="@+id/graph_text_view"
         android:onClick=""/>
-    <TextView android:id="@+id/click_here3"
+    <TextView android:id="@+id/settings_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:keepScreenOn="true"
@@ -43,9 +47,9 @@
         android:gravity="center"
         android:text="@string/text_view_settings"
         android:clickable="true"
-        android:layout_below="@id/click_here2"
+        android:layout_below="@id/how_to_text_view"
         android:onClick=""/>
-    <TextView android:id="@+id/click_here4"
+    <TextView android:id="@+id/graph_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:keepScreenOn="true"
@@ -53,9 +57,23 @@
         android:textStyle="bold"
         android:textSize="50sp"
         android:gravity="center"
+        android:text="@string/graph_text_view_title"
+        android:clickable="true"
+        android:layout_below="@id/start_text_view"
+        android:onClick=""/>
+    <TextView android:id="@+id/about_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:keepScreenOn="true"
+        android:textColor="@color/text_color"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:gravity="center"
         android:text="@string/text_view_about"
         android:clickable="true"
-        android:layout_below="@id/click_here3"
-        android:onClick=""/>
+        android:onClick=""
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
