--- a/app/src/main/res/layout/activity_how_to.xml
+++ b/app/src/main/res/layout/activity_how_to.xml
@@ -14,11 +14,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:keepScreenOn="true"
-        android:textColor="@android:color/secondary_text_dark"
+        android:textColor="@android:color/primary_text_dark"
         android:textStyle="bold"
         android:textSize="50sp"
         android:gravity="center"
-        android:text="How to"
+        android:text="@string/how_to_text_view_label"
         android:clickable="true"
         android:onClick=""
         android:layout_alignParentTop="true"
