Changes: ver 0.1 - clean up code and make click here clickable only when needed

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,10 +21,23 @@
         android:text="@string/text_view_start"
         android:clickable="true"
         android:onClick=""
+        android:layout_below="@+id/graph_text_view" />
+    <TextView android:id="@+id/graph_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:keepScreenOn="true"
+        android:textColor="@color/text_color"
+        android:textStyle="bold"
+        android:textSize="50sp"
+        android:gravity="center"
+        android:text="@string/graph_text_view_title"
+        android:clickable="true"
+        android:onClick=""
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="100dp" />
+        android:layout_marginTop="100dp"
+        android:visibility="invisible"/>
     <TextView android:id="@+id/how_to_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,7 +48,7 @@
         android:gravity="center"
         android:text="@string/text_view_how_to"
         android:clickable="true"
-        android:layout_below="@+id/graph_text_view"
+        android:layout_below="@+id/start_text_view"
         android:onClick=""/>
     <TextView android:id="@+id/settings_text_view"
         android:layout_width="wrap_content"
@@ -48,18 +61,6 @@
         android:text="@string/text_view_settings"
         android:clickable="true"
         android:layout_below="@id/how_to_text_view"
-        android:onClick=""/>
-    <TextView android:id="@+id/graph_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:keepScreenOn="true"
-        android:textColor="@color/text_color"
-        android:textStyle="bold"
-        android:textSize="50sp"
-        android:gravity="center"
-        android:text="@string/graph_text_view_title"
-        android:clickable="true"
-        android:layout_below="@id/start_text_view"
         android:onClick=""/>
     <TextView android:id="@+id/about_text_view"
         android:layout_width="wrap_content"
