--- a/app/src/main/res/layout/activity_examination.xml
+++ b/app/src/main/res/layout/activity_examination.xml
@@ -11,7 +11,7 @@
     android:clickable="false"
     tools:ignore="Overdraw">
 
-    <TextView android:id="@+id/start_text_view"
+    <TextView android:id="@+id/hear_sound_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:keepScreenOn="true"
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:text=""
         android:id="@+id/textView2"
-        android:layout_below="@+id/start_text_view"
+        android:layout_below="@+id/hear_sound_text_view"
         android:layout_centerHorizontal="true"
         android:textColor="@android:color/primary_text_dark" />
 
